ass5_18CS30051/ass6_18CS30051.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 F: %empty

    3 W: %empty

    4 D: %empty

    5 X: %empty

    6 N: %empty

    7 changetable: %empty

    8 primary_expression: IDENTIFIER
    9                   | INTEGER_CONSTANT
   10                   | FLOATING_CONSTANT
   11                   | CHARACTER_CONSTANT
   12                   | STRING_LITERAL
   13                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

   14 postfix_expression: primary_expression
   15                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   16                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   17                   | postfix_expression DOT IDENTIFIER
   18                   | postfix_expression IMPLIES IDENTIFIER
   19                   | postfix_expression INC
   20                   | postfix_expression DEC
   21                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   22                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   23 argument_expression_list_opt: argument_expression_list
   24                             | %empty

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list COMMA assignment_expression

   27 unary_expression: postfix_expression
   28                 | INC unary_expression
   29                 | DEC unary_expression
   30                 | unary_operator cast_expression
   31                 | SIZEOF unary_expression
   32                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   33 unary_operator: BITWISE_AND
   34               | MUL
   35               | ADD
   36               | SUB
   37               | BITWISE_NOT
   38               | EXCLAIM

   39 cast_expression: unary_expression
   40                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   41 multiplicative_expression: cast_expression
   42                          | multiplicative_expression MUL cast_expression
   43                          | multiplicative_expression DIV cast_expression
   44                          | multiplicative_expression MOD cast_expression

   45 additive_expression: multiplicative_expression
   46                    | additive_expression ADD multiplicative_expression
   47                    | additive_expression SUB multiplicative_expression

   48 shift_expression: additive_expression
   49                 | shift_expression SHIFT_LEFT additive_expression
   50                 | shift_expression SHIFT_RIGHT additive_expression

   51 relational_expression: shift_expression
   52                      | relational_expression BIT_SL shift_expression
   53                      | relational_expression BIT_SR shift_expression
   54                      | relational_expression LTE shift_expression
   55                      | relational_expression GTE shift_expression

   56 equality_expression: relational_expression
   57                    | equality_expression EQ relational_expression
   58                    | equality_expression NEQ relational_expression

   59 and_expression: equality_expression
   60               | and_expression BITWISE_AND equality_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression BITWISE_XOR and_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   65 logical_and_expression: inclusive_or_expression
   66                       | logical_and_expression AND M inclusive_or_expression

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression OR M logical_and_expression

   69 conditional_expression: logical_or_expression
   70                       | logical_or_expression N QUESTION M expression N COLON M conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: ASSIGN
   74                    | STAR_EQ
   75                    | DIV_EQ
   76                    | MOD_EQ
   77                    | ADD_EQ
   78                    | SUB_EQ
   79                    | SL_EQ
   80                    | SR_EQ
   81                    | BITWISE_AND_EQ
   82                    | BITWISE_XOR_EQ
   83                    | BITWISE_OR_EQ

   84 expression: assignment_expression
   85           | expression COMMA assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers init_declarator_list SEMICOLON
   88            | declaration_specifiers SEMICOLON

   89 declaration_specifiers: storage_class_specifier declaration_specifiers
   90                       | storage_class_specifier
   91                       | type_specifier declaration_specifiers
   92                       | type_specifier
   93                       | type_qualifier declaration_specifiers
   94                       | type_qualifier
   95                       | function_specifier declaration_specifiers
   96                       | function_specifier

   97 init_declarator_list: init_declarator
   98                     | init_declarator_list COMMA init_declarator

   99 init_declarator: declarator
  100                | declarator ASSIGN initializer

  101 storage_class_specifier: EXTERN
  102                        | STATIC

  103 type_specifier: VOID
  104               | CHAR
  105               | SHORT
  106               | INT
  107               | LONG
  108               | FLOAT
  109               | DOUBLE
  110               | SIGNED
  111               | UNSIGNED
  112               | _BOOL
  113               | _COMPLEX
  114               | _IMAGINARY
  115               | enum_specifier

  116 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  117                         | type_qualifier specifier_qualifier_list_opt

  118 specifier_qualifier_list_opt: %empty
  119                             | specifier_qualifier_list

  120 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  121               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  122               | ENUM IDENTIFIER

  123 identifier_opt: %empty
  124               | IDENTIFIER

  125 enumerator_list: enumerator
  126                | enumerator_list COMMA enumerator

  127 enumerator: IDENTIFIER
  128           | IDENTIFIER ASSIGN constant_expression

  129 type_qualifier: CONST
  130               | RESTRICT
  131               | VOLATILE

  132 function_specifier: INLINE

  133 declarator: pointer direct_declarator
  134           | direct_declarator

  135 direct_declarator: IDENTIFIER
  136                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  137                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  138                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  139                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  140                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  141                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  142                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  143                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  144                  | direct_declarator SQUARE_BRACKET_OPEN MUL SQUARE_BRACKET_CLOSE
  145                  | direct_declarator ROUND_BRACKET_OPEN changetable parameter_type_list ROUND_BRACKET_CLOSE
  146                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  147                  | direct_declarator ROUND_BRACKET_OPEN changetable ROUND_BRACKET_CLOSE

  148 type_qualifier_list_opt: %empty
  149                        | type_qualifier_list

  150 pointer: MUL type_qualifier_list_opt
  151        | MUL type_qualifier_list_opt pointer

  152 type_qualifier_list: type_qualifier
  153                    | type_qualifier_list type_qualifier

  154 parameter_type_list: parameter_list
  155                    | parameter_list COMMA DOTS

  156 parameter_list: parameter_declaration
  157               | parameter_list COMMA parameter_declaration

  158 parameter_declaration: declaration_specifiers declarator
  159                      | declaration_specifiers

  160 identifier_list: IDENTIFIER
  161                | identifier_list COMMA IDENTIFIER

  162 type_name: specifier_qualifier_list

  163 initializer: assignment_expression
  164            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  165            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  166 initializer_list: designation_opt initializer
  167                 | initializer_list COMMA designation_opt initializer

  168 designation_opt: %empty
  169                | designation

  170 designation: designator_list ASSIGN

  171 designator_list: designator
  172                | designator_list designator

  173 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  174           | DOT IDENTIFIER

  175 statement: labeled_statement
  176          | compound_statement
  177          | expression_statement
  178          | selection_statement
  179          | iteration_statement
  180          | jump_statement

  181 loop_statement: labeled_statement
  182               | expression_statement
  183               | selection_statement
  184               | iteration_statement
  185               | jump_statement

  186 labeled_statement: IDENTIFIER COLON M statement
  187                  | CASE constant_expression COLON statement
  188                  | DEFAULT COLON statement

  189 compound_statement: CURLY_BRACKET_OPEN X changetable block_item_list_opt CURLY_BRACKET_CLOSE

  190 block_item_list_opt: %empty
  191                    | block_item_list

  192 block_item_list: block_item
  193                | block_item_list M block_item

  194 block_item: declaration
  195           | statement

  196 expression_statement: expression SEMICOLON
  197                     | SEMICOLON

  198 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
  199                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
  200                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  201 iteration_statement: WHILE W ROUND_BRACKET_OPEN X changetable M expression ROUND_BRACKET_CLOSE M loop_statement
  202                    | WHILE W ROUND_BRACKET_OPEN X changetable M expression ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE
  203                    | DO D M loop_statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  204                    | DO D CURLY_BRACKET_OPEN M block_item_list_opt CURLY_BRACKET_CLOSE M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  205                    | FOR F ROUND_BRACKET_OPEN X changetable declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  206                    | FOR F ROUND_BRACKET_OPEN X changetable expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M loop_statement
  207                    | FOR F ROUND_BRACKET_OPEN X changetable declaration M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  208                    | FOR F ROUND_BRACKET_OPEN X changetable expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  209 jump_statement: GOTO IDENTIFIER SEMICOLON
  210               | CONTINUE SEMICOLON
  211               | BREAK SEMICOLON
  212               | RETURN expression SEMICOLON
  213               | RETURN SEMICOLON

  214 translation_unit: external_declaration
  215                 | translation_unit external_declaration

  216 external_declaration: function_definition
  217                     | declaration

  218 function_definition: declaration_specifiers declarator declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  219 declaration_list: declaration
  220                 | declaration_list declaration

  221 declaration_list_opt: %empty
  222                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    RESTRICT (258) 130
    BREAK (259) 211
    CASE (260) 187
    CHAR (261) 104
    CONST (262) 129
    CONTINUE (263) 210
    DEFAULT (264) 188
    DO (265) 203 204
    DOUBLE (266) 109
    ELSE (267) 199
    ENUM (268) 120 121 122
    EXTERN (269) 101
    FLOAT (270) 108
    FOR (271) 205 206 207 208
    GOTO (272) 209
    IF (273) 198 199
    INLINE (274) 132
    INT (275) 106
    LONG (276) 107
    RETURN (277) 212 213
    SHORT (278) 105
    SIGNED (279) 110
    SIZEOF (280) 31 32
    STATIC (281) 102 141 142
    STRUCT (282)
    SWITCH (283) 200
    TYPEDEF (284)
    UNION (285)
    UNSIGNED (286) 111
    VOID (287) 103
    VOLATILE (288) 131
    WHILE (289) 201 202 203 204
    _BOOL (290) 112
    _COMPLEX (291) 113
    _IMAGINARY (292) 114
    IDENTIFIER <symp> (293) 8 17 18 122 124 127 128 135 160 161 174 186 209
    INTEGER_CONSTANT <intval> (294) 9
    FLOATING_CONSTANT <char_value> (295) 10
    CHARACTER_CONSTANT <char_value> (296) 11
    STRING_LITERAL <char_value> (297) 12
    SQUARE_BRACKET_OPEN (298) 15 137 138 139 140 141 142 143 144 173
    SQUARE_BRACKET_CLOSE (299) 15 137 138 139 140 141 142 143 144 173
    ROUND_BRACKET_OPEN (300) 13 16 21 22 32 40 136 145 146 147 198 199 200 201 202 203 204 205 206 207 208
    ROUND_BRACKET_CLOSE (301) 13 16 21 22 32 40 136 145 146 147 198 199 200 201 202 203 204 205 206 207 208
    CURLY_BRACKET_OPEN (302) 21 22 120 121 164 165 189 202 204 207 208 218
    CURLY_BRACKET_CLOSE (303) 21 22 120 121 164 165 189 202 204 207 208 218
    DOT (304) 17 174
    IMPLIES (305) 18
    INC (306) 19 28
    DEC (307) 20 29
    BITWISE_AND (308) 33 60
    MUL (309) 34 42 143 144 150 151
    ADD (310) 35 46
    SUB (311) 36 47
    BITWISE_NOT (312) 37
    EXCLAIM (313) 38
    DIV (314) 43
    MOD (315) 44
    SHIFT_LEFT (316) 49
    SHIFT_RIGHT (317) 50
    BIT_SL (318) 52
    BIT_SR (319) 53
    LTE (320) 54
    GTE (321) 55
    EQ (322) 57
    NEQ (323) 58
    BITWISE_XOR (324) 62
    BITWISE_OR (325) 64
    AND (326) 66
    OR (327) 68
    QUESTION (328) 70
    COLON (329) 70 186 187 188
    SEMICOLON (330) 87 88 196 197 203 204 209 210 211 212 213
    DOTS (331) 155
    ASSIGN (332) 73 100 128 170
    STAR_EQ (333) 74
    DIV_EQ (334) 75
    MOD_EQ (335) 76
    ADD_EQ (336) 77
    SUB_EQ (337) 78
    SL_EQ (338) 79
    SR_EQ (339) 80
    BITWISE_AND_EQ (340) 81
    BITWISE_XOR_EQ (341) 82
    BITWISE_OR_EQ (342) 83
    COMMA (343) 22 26 85 98 121 126 155 157 161 165 167
    HASH (344)
    "then" (345)


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    M <instr_number> (92)
        on left: 1
        on right: 66 68 70 186 193 198 199 201 202 203 204 205 206 207 208
    F (93)
        on left: 2
        on right: 205 206 207 208
    W (94)
        on left: 3
        on right: 201 202
    D (95)
        on left: 4
        on right: 203 204
    X (96)
        on left: 5
        on right: 189 201 202 205 206 207 208
    N <stat> (97)
        on left: 6
        on right: 70 198 199 205 206 207 208
    changetable (98)
        on left: 7
        on right: 145 147 189 201 202 205 206 207 208 218
    primary_expression <expr> (99)
        on left: 8 9 10 11 12 13
        on right: 14
    postfix_expression <A> (100)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 15 16 17 18 19 20 27
    argument_expression_list_opt <num_params> (101)
        on left: 23 24
        on right: 16
    argument_expression_list <num_params> (102)
        on left: 25 26
        on right: 23 26
    unary_expression <A> (103)
        on left: 27 28 29 30 31 32
        on right: 28 29 31 39 72
    unary_operator <unaryOp> (104)
        on left: 33 34 35 36 37 38
        on right: 30
    cast_expression <A> (105)
        on left: 39 40
        on right: 30 40 41 42 43 44
    multiplicative_expression <expr> (106)
        on left: 41 42 43 44
        on right: 42 43 44 45 46 47
    additive_expression <expr> (107)
        on left: 45 46 47
        on right: 46 47 48 49 50
    shift_expression <expr> (108)
        on left: 48 49 50
        on right: 49 50 51 52 53 54 55
    relational_expression <expr> (109)
        on left: 51 52 53 54 55
        on right: 52 53 54 55 56 57 58
    equality_expression <expr> (110)
        on left: 56 57 58
        on right: 57 58 59 60
    and_expression <expr> (111)
        on left: 59 60
        on right: 60 61 62
    exclusive_or_expression <expr> (112)
        on left: 61 62
        on right: 62 63 64
    inclusive_or_expression <expr> (113)
        on left: 63 64
        on right: 64 65 66
    logical_and_expression <expr> (114)
        on left: 65 66
        on right: 66 67 68
    logical_or_expression <expr> (115)
        on left: 67 68
        on right: 68 69 70
    conditional_expression <expr> (116)
        on left: 69 70
        on right: 70 71 86
    assignment_expression <expr> (117)
        on left: 71 72
        on right: 25 26 72 84 85 137 139 141 142 163
    assignment_operator (118)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 72
    expression <expr> (119)
        on left: 84 85
        on right: 13 15 70 85 196 198 199 200 201 202 203 204 205 206 207 208 212
    constant_expression (120)
        on left: 86
        on right: 128 173 187
    declaration (121)
        on left: 87 88
        on right: 194 205 207 217 219 220
    declaration_specifiers (122)
        on left: 89 90 91 92 93 94 95 96
        on right: 87 88 89 91 93 95 158 159 218
    init_declarator_list (123)
        on left: 97 98
        on right: 87 98
    init_declarator <symp> (124)
        on left: 99 100
        on right: 97 98
    storage_class_specifier (125)
        on left: 101 102
        on right: 89 90
    type_specifier (126)
        on left: 103 104 105 106 107 108 109 110 111 112 113 114 115
        on right: 91 92 116
    specifier_qualifier_list (127)
        on left: 116 117
        on right: 119 162
    specifier_qualifier_list_opt (128)
        on left: 118 119
        on right: 116 117
    enum_specifier (129)
        on left: 120 121 122
        on right: 115
    identifier_opt (130)
        on left: 123 124
        on right: 120 121
    enumerator_list (131)
        on left: 125 126
        on right: 120 121 126
    enumerator (132)
        on left: 127 128
        on right: 125 126
    type_qualifier (133)
        on left: 129 130 131
        on right: 93 94 117 152 153
    function_specifier (134)
        on left: 132
        on right: 95 96
    declarator <symp> (135)
        on left: 133 134
        on right: 99 100 136 158 218
    direct_declarator <symp> (136)
        on left: 135 136 137 138 139 140 141 142 143 144 145 146 147
        on right: 133 134 137 138 139 140 141 142 143 144 145 146 147
    type_qualifier_list_opt (137)
        on left: 148 149
        on right: 150 151
    pointer <sym_type> (138)
        on left: 150 151
        on right: 133 151
    type_qualifier_list (139)
        on left: 152 153
        on right: 137 138 141 143 149 153
    parameter_type_list (140)
        on left: 154 155
        on right: 145
    parameter_list (141)
        on left: 156 157
        on right: 154 155 157
    parameter_declaration (142)
        on left: 158 159
        on right: 156 157
    identifier_list (143)
        on left: 160 161
        on right: 146 161
    type_name (144)
        on left: 162
        on right: 21 22 32 40
    initializer <symp> (145)
        on left: 163 164 165
        on right: 100 166 167
    initializer_list (146)
        on left: 166 167
        on right: 21 22 164 165 167
    designation_opt (147)
        on left: 168 169
        on right: 166 167
    designation (148)
        on left: 170
        on right: 169
    designator_list (149)
        on left: 171 172
        on right: 170 172
    designator (150)
        on left: 173 174
        on right: 171 172
    statement <stat> (151)
        on left: 175 176 177 178 179 180
        on right: 186 187 188 195 198 199 200
    loop_statement <stat> (152)
        on left: 181 182 183 184 185
        on right: 201 203 205 206
    labeled_statement <stat> (153)
        on left: 186 187 188
        on right: 175 181
    compound_statement <stat> (154)
        on left: 189
        on right: 176
    block_item_list_opt <stat> (155)
        on left: 190 191
        on right: 189 202 204 207 208 218
    block_item_list <stat> (156)
        on left: 192 193
        on right: 191 193
    block_item <stat> (157)
        on left: 194 195
        on right: 192 193
    expression_statement <expr> (158)
        on left: 196 197
        on right: 177 182 205 206 207 208
    selection_statement <stat> (159)
        on left: 198 199 200
        on right: 178 183
    iteration_statement <stat> (160)
        on left: 201 202 203 204 205 206 207 208
        on right: 179 184
    jump_statement <stat> (161)
        on left: 209 210 211 212 213
        on right: 180 185
    translation_unit (162)
        on left: 214 215
        on right: 0 215
    external_declaration (163)
        on left: 216 217
        on right: 214 215
    function_definition (164)
        on left: 218
        on right: 216
    declaration_list (165)
        on left: 219 220
        on right: 220 222
    declaration_list_opt (166)
        on left: 221 222
        on right: 218


State 0

    0 $accept: . translation_unit $end

    RESTRICT    shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    VOID        shift, and go to state 15
    VOLATILE    shift, and go to state 16
    _BOOL       shift, and go to state 17
    _COMPLEX    shift, and go to state 18
    _IMAGINARY  shift, and go to state 19

    declaration              go to state 20
    declaration_specifiers   go to state 21
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    translation_unit         go to state 27
    external_declaration     go to state 28
    function_definition      go to state 29


State 1

  130 type_qualifier: RESTRICT .

    $default  reduce using rule 130 (type_qualifier)


State 2

  104 type_specifier: CHAR .

    $default  reduce using rule 104 (type_specifier)


State 3

  129 type_qualifier: CONST .

    $default  reduce using rule 129 (type_qualifier)


State 4

  109 type_specifier: DOUBLE .

    $default  reduce using rule 109 (type_specifier)


State 5

  120 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  121               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  122               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 30

    $default  reduce using rule 123 (identifier_opt)

    identifier_opt  go to state 31


State 6

  101 storage_class_specifier: EXTERN .

    $default  reduce using rule 101 (storage_class_specifier)


State 7

  108 type_specifier: FLOAT .

    $default  reduce using rule 108 (type_specifier)


State 8

  132 function_specifier: INLINE .

    $default  reduce using rule 132 (function_specifier)


State 9

  106 type_specifier: INT .

    $default  reduce using rule 106 (type_specifier)


State 10

  107 type_specifier: LONG .

    $default  reduce using rule 107 (type_specifier)


State 11

  105 type_specifier: SHORT .

    $default  reduce using rule 105 (type_specifier)


State 12

  110 type_specifier: SIGNED .

    $default  reduce using rule 110 (type_specifier)


State 13

  102 storage_class_specifier: STATIC .

    $default  reduce using rule 102 (storage_class_specifier)


State 14

  111 type_specifier: UNSIGNED .

    $default  reduce using rule 111 (type_specifier)


State 15

  103 type_specifier: VOID .

    $default  reduce using rule 103 (type_specifier)


State 16

  131 type_qualifier: VOLATILE .

    $default  reduce using rule 131 (type_qualifier)


State 17

  112 type_specifier: _BOOL .

    $default  reduce using rule 112 (type_specifier)


State 18

  113 type_specifier: _COMPLEX .

    $default  reduce using rule 113 (type_specifier)


State 19

  114 type_specifier: _IMAGINARY .

    $default  reduce using rule 114 (type_specifier)


State 20

  217 external_declaration: declaration .

    $default  reduce using rule 217 (external_declaration)


State 21

   87 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   88            | declaration_specifiers . SEMICOLON
  218 function_definition: declaration_specifiers . declarator declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 32
    ROUND_BRACKET_OPEN  shift, and go to state 33
    MUL                 shift, and go to state 34
    SEMICOLON           shift, and go to state 35

    init_declarator_list  go to state 36
    init_declarator       go to state 37
    declarator            go to state 38
    direct_declarator     go to state 39
    pointer               go to state 40


State 22

   89 declaration_specifiers: storage_class_specifier . declaration_specifiers
   90                       | storage_class_specifier .

    RESTRICT    shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    VOID        shift, and go to state 15
    VOLATILE    shift, and go to state 16
    _BOOL       shift, and go to state 17
    _COMPLEX    shift, and go to state 18
    _IMAGINARY  shift, and go to state 19

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 23

   91 declaration_specifiers: type_specifier . declaration_specifiers
   92                       | type_specifier .

    RESTRICT    shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    VOID        shift, and go to state 15
    VOLATILE    shift, and go to state 16
    _BOOL       shift, and go to state 17
    _COMPLEX    shift, and go to state 18
    _IMAGINARY  shift, and go to state 19

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 24

  115 type_specifier: enum_specifier .

    $default  reduce using rule 115 (type_specifier)


State 25

   93 declaration_specifiers: type_qualifier . declaration_specifiers
   94                       | type_qualifier .

    RESTRICT    shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    VOID        shift, and go to state 15
    VOLATILE    shift, and go to state 16
    _BOOL       shift, and go to state 17
    _COMPLEX    shift, and go to state 18
    _IMAGINARY  shift, and go to state 19

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 26

   95 declaration_specifiers: function_specifier . declaration_specifiers
   96                       | function_specifier .

    RESTRICT    shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    VOID        shift, and go to state 15
    VOLATILE    shift, and go to state 16
    _BOOL       shift, and go to state 17
    _COMPLEX    shift, and go to state 18
    _IMAGINARY  shift, and go to state 19

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 27

    0 $accept: translation_unit . $end
  215 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 45
    RESTRICT    shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    VOID        shift, and go to state 15
    VOLATILE    shift, and go to state 16
    _BOOL       shift, and go to state 17
    _COMPLEX    shift, and go to state 18
    _IMAGINARY  shift, and go to state 19

    declaration              go to state 20
    declaration_specifiers   go to state 21
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    external_declaration     go to state 46
    function_definition      go to state 29


State 28

  214 translation_unit: external_declaration .

    $default  reduce using rule 214 (translation_unit)


State 29

  216 external_declaration: function_definition .

    $default  reduce using rule 216 (external_declaration)


State 30

  122 enum_specifier: ENUM IDENTIFIER .
  124 identifier_opt: IDENTIFIER .

    CURLY_BRACKET_OPEN  reduce using rule 124 (identifier_opt)
    $default            reduce using rule 122 (enum_specifier)


State 31

  120 enum_specifier: ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  121               | ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 47


State 32

  135 direct_declarator: IDENTIFIER .

    $default  reduce using rule 135 (direct_declarator)


State 33

  136 direct_declarator: ROUND_BRACKET_OPEN . declarator ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 32
    ROUND_BRACKET_OPEN  shift, and go to state 33
    MUL                 shift, and go to state 34

    declarator         go to state 48
    direct_declarator  go to state 39
    pointer            go to state 40


State 34

  150 pointer: MUL . type_qualifier_list_opt
  151        | MUL . type_qualifier_list_opt pointer

    RESTRICT  shift, and go to state 1
    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 16

    $default  reduce using rule 148 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


State 35

   88 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 88 (declaration)


State 36

   87 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   98 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 52
    COMMA      shift, and go to state 53


State 37

   97 init_declarator_list: init_declarator .

    $default  reduce using rule 97 (init_declarator_list)


State 38

   99 init_declarator: declarator .
  100                | declarator . ASSIGN initializer
  218 function_definition: declaration_specifiers declarator . declaration_list_opt changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
